--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-eslint": "^10.0.1",
     "babel-preset-env": "^1.7.0",
-    "nodemon": "^1.18.10"
+    "eslint": "^5.14.1",
+    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-prettier": "^4.0.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "nodemon": "^1.18.10",
+    "prettier": "^1.16.4"
   },
   "dependencies": {
     "express": "^4.16.4"
