--- a/package.json
+++ b/package.json
@@ -19,6 +19,12 @@
     "prettier": "^1.16.4"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "bcrypt": "^3.0.4",
+    "bluebird": "^3.5.3",
+    "body-parser": "^1.18.3",
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.5.0",
+    "mongoose": "^5.4.15"
   }
 }
