--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.0",
-    "mongoose": "^5.4.15"
+    "lodash": "^4.17.11",
+    "mongoose": "^5.4.15",
+    "mongoose-unique-validator": "^2.0.2"
   }
 }
